--- a/wow-resources/index.html
+++ b/wow-resources/index.html
@@ -64,14 +64,15 @@ title: 'Women on web'
       </tr>
       <tr>
         <td>
-          <p>મારી માતા જેને નથી ખબર કે  હંમેશા ઈન્ટરનેટ પર હું શું કરું છું. મને બોલતી રહે છે કોમ્પ્યુટર સામે શું આખો દિવસ બેસે આ કાળી પેટી માં કઈ ખજાનો છે ? મને સમય નતો મળતો એને શીખવાડવાનો કે હું શું કરું છું. એક દિવસ ઉનાળા ની ઋતુ માં સોસાયટી ની  બધી ગૃહિણી બહાર બેસી હતી હું મારા મોબાઇલ માં મેલ ચેક કરતી હતી ત્યારે પાછું કહ્યું "આખો દિવસ મોબાઇલ અને કોમ્પ્યુટર બીજું કઈ દેખાતું નથી." આ સાંભળી સાંભળી ને હું  થાકી ગયી હતી એટલે ત્યારે જ હું બધી ગૃહિણી ને ઈન્ટરનેટ એટલે શુ એ શીખવાડ્યું </p>
+          <p>કૃતિ , એક 16 વર્ષની  સાયન્સમાં ભણતી વિદ્યાર્થીની છે. કૃતિ તેનાં પરિવાર સાથે રહે છે. કૃતિ પાસે પોતાનો મોબાઈલ નથી. કૃતિને પોતાનાં અભ્યાસ અર્થે ઈન્ટરનેટ એક્સેસની જરૂર પડતી રહે છે. તેમનાં માતા-પિતા એ જાણતા હોવા છતાં, કે કૃતિ ઈન્ટરનેટનો ઉપયોગ માત્ર અભ્યાસ માટે કરે છે આમ છતાંય કૃતિ જ્યારે પણ ઈન્ટરનેટનો ઉપયોગ કરે છે ત્યારે ઘરનું કોઈ ને કોઈ સભ્ય કૃતિ જાણે એક ગુનેગાર હોય તેની જેમ તેનાં પર નજર રાખે છે.તેની જ સરખમણીએ તેનાંથી બે વર્ષ નાનો તેનો ભાઈ વિશ્વ, જેને  તેને મોબાઈલ લઈ આપવામાં આવ્યો છે, અને એ પણ ઈન્ટરનેટની સુવિધા સાથે.</p>
         </td>      
       </tr>
     <tr>
     <td>
+<a href="gujarati/char-kruti/article/index.html">
       <button class="btn btn-primary btn-xs"  >
         Read More 
-      </button>
+      </button></a>
       
       <button class="btn btn-primary btn-xs" >       
         Translate This
